--- a/src/main/webapp/static/css/app.css
+++ b/src/main/webapp/static/css/app.css
@@ -4,6 +4,7 @@ body {
 
 h1 {
   border-bottom: 1px solid gray;
+  margin-top: 0;
 }
 
 /* View: Phone list */
@@ -28,13 +29,26 @@ h1 {
 /* View: Phone detail */
 .plitter {
   background-color: white;
-  border: 1px solid black;
+  display: none;
   float: left;
   height: 400px;
   margin-bottom: 2em;
   margin-right: 3em;
   padding: 2em;
   width: 400px;
+}
+
+.plitter:first-child {
+  display: block;
+}
+
+.plitter-images {
+  background-color: white;
+  float: left;
+  height: 450px;
+  overflow: hidden;
+  position: relative;
+  width: 450px;
 }
 
 .plitter-thumbs {
